# simple-rag

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: health.py  kb.py  requirements.py  settings.py
backend/app/core/domain_knowledge/: __init__.py  product_facts.py  synonyms.py  term_mapping.py
backend/app/core/extraction/: parser.py  pipeline.py  presplit.py  prompts.py  schemas.py  validator.py
backend/app/core/kb/: ingest.py  manifest.py  snapshot.py  store.py  swap.py
backend/app/core/llm/: __init__.py  provider.py
backend/app/core/reporting/: anonymizer.py  docx.py  markdown.py  xlsx.py
backend/app/core/retrieval/: embedder.py  product_match.py  reranker.py  retriever.py
backend/app/core/verification/: llm_api.py  llm_local.py  prompts.py  schemas.py  verifier.py
backend/app/infra/: keychain.py  logging.py  runpod.py  ssh.py
backend/app/jobs/: kb_sync.py
backend/tests/: test_api_health.py  test_cortex_docs_client.py  test_extraction_llm_fallback.py  test_extraction_pipeline.py  test_kb_api.py  test_kb_sync.py  test_presplit.py  test_product_detect.py  test_report_export.py  test_runpod_parse.py  test_settings_llm.py  test_snapshot_extract.py  test_ssh_stream.py  test_sync_docs.py
desktop/: README.md
docs/: architecture.md  desktop-tauri.md  extending-products.md  kb-sync-flow.md
docs/decisions/: 001-vector-db.md  002-runpod-connection.md  003-llm-strategy.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
eval/: gold_set.json  run_eval.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/kb/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/brand/: logo.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/requirements/: results-table.tsx
frontend/src/i18n/: en.ts  index.ts  pl.ts
frontend/src/lib/: utils.ts
frontend/src/stores/: app-store.ts
runpod/: README.md  bootstrap.sh  requirements.txt
runpod/cortex_docs_sync_vendor/: pyproject.toml
runpod/cortex_docs_sync_vendor/cortex_docs_sync/: __init__.py  __main__.py  catalog.py  cli.py  client.py  html_assembly.py  models.py  state.py  sync.py
runpod/pipeline/: build_index.py  chunk_html.py  embed_gpu.py  export_snapshot.py  run_all.sh  sync_docs.py
scripts/: ingest_seed_kb.py  poc_vector_db.py  preflight.py  run_e2e.sh
