[project]
name = "siwz-rag-lite"
version = "0.1.0"
description = "Professional SIWZ/RFP requirement verification for Palo Alto Cortex documentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "SIWZ-RAG Lite" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "keyring>=25.5.0",
    "pyyaml>=6.0.2",
    "lancedb>=0.17.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    "FlagEmbedding>=1.2.10",
    "torch>=2.1.0",
    "selectolax>=0.3.27",
    "docling>=2.70.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "zstandard>=0.22.0",
    "paramiko>=3.5.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["backend/app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend", "."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
